--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <h2>I'm a Web Developer</h2>
     <hr />
 
-    <h3><a href="./public/movie-ranking.html"> Movie Ranking Project</h3></a>
-    <a href="./public/movie-ranking.html"><img src="./images/movie-ranking.png" height="200" alt="Movie Ranking Project image" /></a>
+    <h3><a href="./movie-ranking.html"> Movie Ranking Project</h3></a>
+    <a href="./movie-ranking.html"><img src="./movie-ranking.png" height="200" alt="Movie Ranking Project image" /></a>
 
-    <h3><a href="./public/birthday-invite.html"> Birthday Invite Project</h3></a>
-    <a href="./public/birthday-invite.html"><img src="./images/birthday-invite.png" height="200" alt="birthday-invite" /></a>
+    <h3><a href="./birthday-invite.html"> Birthday Invite Project</h3></a>
+    <a href="./birthday-invite.html"><img src="./birthday-invite.png" height="200" alt="birthday-invite" /></a>
     <hr />
 
-    <h4><a href="./public/about.html">About Me </h4></a> <h4><a href="./public/contact.html">Contact Me </h4></a>
+    <h4><a href="./about.html">About Me </h4></a> <h4><a href="./contact.html">Contact Me </h4></a>
 
 </body>
 </html>
